--- a/Estacione-SPA/src/app/core/nav-bar/nav-bar.component.html
+++ b/Estacione-SPA/src/app/core/nav-bar/nav-bar.component.html
@@ -4,16 +4,36 @@
       <!-- <a class="p-2" [routerLink]="['/buscar/mapa']" routerLinkActive="active">Buscar</a>
       <a class="p-2" [routerLink]="['/mapaendereco']" routerLinkActive="active">Mapa Endereco</a> -->
       <a class="p-2" [routerLink]="['/mapaendereco']" routerLinkActive="active">Buscar</a>
-
       <a class="p-2" href="#">Support</a>
       <a class="p-2" href="#">Pricing</a>
     </nav>
     <div class="d-flex align-items-center">
         <a [routerLink]="['/cesta']" class="position-relative">
             <i class class="fa fa-shopping-cart fa-2x mr-5 text-dark"></i>
-            <div *ngIf="(cesta$ | async) as cesta" class="cart-no">{{cesta.itens.length}}</div>
+            <!-- <div *ngIf="(cesta$ | async) as cesta" class="cart-no">{{cesta.itens.length}}</div> -->
+            <div *ngIf="(cesta$ | async)" class="cart-no">{{(cesta$ | async).itens.length}}</div>
         </a>
-        <a class="btn btn-outline-primary mr-2" href="#">Inscrever-se</a>
-        <a class="btn btn-outline-primary mr-3" href="#">Entrar</a>
+        <ng-container *ngIf="(usuarioAtual$ | async) === null">
+          <a class="btn btn-outline-primary mr-2" [routerLink]="['/conta/registrar']" href="#">Inscrever-se</a>
+          <a class="btn btn-outline-primary mr-3" [routerLink]="['/conta/login']" href="#">Entrar</a>
+        </ng-container>
+
+        <ng-container *ngIf="usuarioAtual$ | async">
+          <div class="dropdown ml-3 mr-5" dropdown>
+           <a class="dropdown-toggle" style="cursor: pointer" dropdownToggle> <strong>Bem-Vindo</strong>  {{(usuarioAtual$ | async).displayName}}</a>
+            <div class="dropdown-menu dropdown-menu-right" style="cursor: pointer;" *dropdownMenu>
+              <a routerLink="/cesta" class="dropdown-item d-flex align-items-center py-2">
+                <i class="fa fa-shopping-cart mr-3"></i> Ver Cesta
+              </a>
+              <a routerLink="/ordens" class="dropdown-item d-flex align-items-center py-2">
+                <i class="fa fa-history mr-3"></i> Ver Compras
+              </a>
+              <div class="dropdown-divider"></div>
+              <a (click)="logout()" class="dropdown-item d-flex align-items-center py-2">
+                <i class="fa fa-sign-out mr-3"></i> Sair
+              </a>
+            </div>
+          </div>
+        </ng-container>
     </div>
   </div> 
