--- a/Estacione-SPA/src/app/cesta-compras/cesta-compras.component.html
+++ b/Estacione-SPA/src/app/cesta-compras/cesta-compras.component.html
@@ -12,7 +12,7 @@
                         (decrementar)="decrementarQuantidadeItens($event)"
                         (incrementar)="incrementarQuantidadeItens($event)"
                         (remover)="removerItemCesta($event)"
-                        [itens]="(cesta$ | async).itens"
+                        [itens]="(cesta$ | async).itensCestaCliente"
                         ></app-cesta-sumario>
                     </div>
                 </div>
