--- a/Estacione-SPA/src/app/checkout/checkout-pagamento/checkout-pagamento.component.html
+++ b/Estacione-SPA/src/app/checkout/checkout-pagamento/checkout-pagamento.component.html
@@ -1,8 +1,7 @@
 <div class="mt-4" [formGroup]="checkoutForm">
     <div class="row">
         <div class="form-group col-12" formGroupName="pagamentoForm">
-            <!-- <app-text-input [label]="'Nome no cartão'" formControlName="nomeNoCartao"></app-text-input> -->
-            <app-text-input formControlName="nomeNoCartao"></app-text-input>
+            <app-text-input [label]="'Nome no cartão'" formControlName="nomeNoCartao"></app-text-input>
         </div>
         <div class="form-group col-6">
             <div #cardNumber class="form-control py-3"></div>
