--- a/Estacione-SPA/src/app/home/home.component.html
+++ b/Estacione-SPA/src/app/home/home.component.html
@@ -1,1 +1,17 @@
-<p>home works!</p>
+<div class="container-12 container blue-info-section" style="margin-top: 240px;">
+    <div class="grid-4 weight-200">
+        <i class="fa fa-search fa-3x"></i>
+        <div class="how-section-header">Localize</div>
+        <div class="how-section-blurb">Encontre o estacionamento próximo ao seu destino.</div>
+    </div>
+    <div class="grid-4 weight-200">
+        <i class="fa fa-credit-card fa-3x"></i>
+        <div class="how-section-header">Pague</div>
+        <div class="how-section-blurb">Alugue uma vaga antecipadamente utilizando seu cartão de crédito.</div>
+    </div>
+    <div class="grid-4 weight-200">
+        <i class="fa fa-car fa-3x"></i>
+        <div class="how-section-header">Estacione</div>
+        <div class="how-section-blurb">Dirija-se ao estacionamento com sua vaga garantida.</div>
+    </div>
+</div>
