--- a/Estacione-SPA/src/app/mapa-endereco/endereco/endereco.component.html
+++ b/Estacione-SPA/src/app/mapa-endereco/endereco/endereco.component.html
@@ -1,15 +1,14 @@
-<div class="row">
-    <div class="col-4">
+<div class="row" *ngFor="let item of estacionamento">
+    <!-- <div class="col-4">
         <img src="./assets/imagens/parkauto.png">
-    </div>
+    </div> -->
     <div class="col-4">
-        <p>{{estacionamento.nomeEstacionamento}}</p>
-        <p>{{estacionamento.formattedAddress}}, {{estacionamento.numero}}</p>
-        <!-- <a href="https://www.google.com" class="alugar">Alugar Agora</a> -->
+        <img src="{{item.fotoEstacionamento}}">
+    </div>
+    <div class="col-6" >
+        <p>{{item.nomeEstacionamento}}</p>
+        <p>R$ {{item.precoHora}}</p>
+        <p>{{item.formattedAddress}}, {{item.numero}}</p>
         <button (click)="AddItemCestaCompras()" type="button" class="alugar">Alugar Agora</button>
-    </div>
-    <div class="col-4">
-        <p>R$ {{estacionamento.precoHora}}</p>
-        <a href="#">Detalhes</a>
     </div>
 </div>
