--- a/Estacione-SPA/src/app/mapa-endereco/mapa-endereco.component.html
+++ b/Estacione-SPA/src/app/mapa-endereco/mapa-endereco.component.html
@@ -1,17 +1,17 @@
 <div class="container">
-    <div class="row" style="background-color: blue; height: 515px;">
-        <div class="col-4" style="background-color: red;" >
+    <div class="row" style="background-color:  #3995f7; height: 515px;">
+        <div class="col-4" style="background-color:  #3995f7; overflow-y: scroll; max-height: 525px;" >
             <form [formGroup]="buscaForm" (ngSubmit)="buscarEnderecoEstacionamento()" class="form-inline justify-content-start mb-4 mt-2"  >
                 <input type="text" placeholder="Endereço ou Cep" class="mr-2 form-control mr-sm-2" formControlName="RuaOuCep">
                 <button type="submit" class="btn btn-success my-2 my-sm-0">Buscar</button>
             </form>
-            <div>
+            <div >
                 <app-endereco *ngIf="latitudeLongitude" [estacionamento]="latitudeLongitude"></app-endereco>
             </div>
         </div>
         <div class="col-8">
-            <agm-map *ngIf="latitudeLongitude" [latitude]="latitudeLongitude.latitude" [longitude]="latitudeLongitude.longitude" [zoom]="zoom">
-                <agm-marker [latitude]="latitudeLongitude.latitude" [longitude]="latitudeLongitude.longitude"></agm-marker>
+            <agm-map  [latitude]="latitudeLongitude[0].latitude" [longitude]="latitudeLongitude[0].longitude" [zoom]="zoom">
+                <agm-marker *ngFor="let item of latitudeLongitude" [latitude]="item.latitude" [longitude]="item.longitude"></agm-marker>
             </agm-map>
         </div>
     </div>
