--- a/Estacione-SPA/src/app/core/nav-bar/nav-bar.component.html
+++ b/Estacione-SPA/src/app/core/nav-bar/nav-bar.component.html
@@ -1,17 +1,13 @@
 <div class="d-flex flex-column flex-md-row align-items-center justify-content-between p-3 px-md-4 mb-3 bg-white border-bottom shadow-sm fixed-top">
     <a class="my-0 font-weight-bold logo" [routerLink]="['/home']">Estacione</a>
     <nav class="my-2 my-md-0 mr-md-3 text-uppercase">
-      <!-- <a class="p-2" [routerLink]="['/buscar/mapa']" routerLinkActive="active">Buscar</a>
-      <a class="p-2" [routerLink]="['/mapaendereco']" routerLinkActive="active">Mapa Endereco</a> -->
+      <a class="p-2" [routerLink]="['/home']" routerLinkActive="active">Inicio</a>
       <a class="p-2" [routerLink]="['/mapaendereco']" routerLinkActive="active">Buscar</a>
-      <a class="p-2" href="#">Support</a>
-      <a class="p-2" href="#">Pricing</a>
     </nav>
     <div class="d-flex align-items-center">
         <a [routerLink]="['/cesta']" class="position-relative">
             <i class class="fa fa-shopping-cart fa-2x mr-5 text-dark"></i>
-            <!-- <div *ngIf="(cesta$ | async) as cesta" class="cart-no">{{cesta.itens.length}}</div> -->
-            <div *ngIf="(cesta$ | async)" class="cart-no">{{(cesta$ | async).itens.length}}</div>
+            <div *ngIf="(cesta$ | async)" class="cart-no">{{(cesta$ | async).itensCestaCliente.length}}</div>
         </a>
         <ng-container *ngIf="(usuarioAtual$ | async) === null">
           <a class="btn btn-outline-primary mr-2" [routerLink]="['/conta/registrar']" href="#">Inscrever-se</a>
