--- a/Estacione-SPA/src/app/mapa-endereco/endereco/endereco.component.scss
+++ b/Estacione-SPA/src/app/mapa-endereco/endereco/endereco.component.scss
@@ -1,10 +1,16 @@
 img{
-    width: 100px;
-    height: 100px;
-
+    width: 70px;
+    height: 70px;
 }
-
 .alugar{
-    border-color: blue;
-    color: blue;
+    border-color:  #3995f7;
+    color:  #3995f7;
+    font-size: 20px;
+    font-weight: bold;
+    border-style: none;
+}
+p {
+    font-weight: bold;
+    font-size: 15px;
+    color: white;
 }
